--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -144,9 +144,10 @@ jobs:
       - name: Install Python dependencies
         working-directory: MLOps-Pipeline
         run: |
-          pip install -r requirements.txt
-          pip install "sagemaker>=2.232.0" --upgrade --force-reinstall
-          python -c "from sagemaker.processing import Processor; print('SageMaker SDK installed successfully')"
+          pip install aws-cdk-lib constructs boto3
+          pip install --no-deps sagemaker
+          pip install sagemaker-core schema packaging attrs platformdirs cloudpickle jsonschema tblib psutil docker pyyaml
+          python -c "from sagemaker.processing import Processor; print('SageMaker SDK ready')"
 
       - name: CDK Bootstrap
         working-directory: MLOps-Pipeline
