--- a/MLOps-Pipeline/requirements.txt
+++ b/MLOps-Pipeline/requirements.txt
@@ -1,5 +1,6 @@
 # MLOps Pipeline CDK Dependencies
 aws-cdk-lib>=2.100.0
 constructs>=10.0.0
-sagemaker>=2.200.0,<2.230.0
 boto3>=1.34.0
+cattrs>=23.1.0,<24.0.0
+attrs>=23.1.0
