--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -407,8 +407,7 @@ jobs:
             "DefaultCacheBehavior": {
               "TargetOriginId": "S3Origin",
               "ViewerProtocolPolicy": "redirect-to-https",
-              "AllowedMethods": {"Quantity": 2, "Items": ["GET", "HEAD"]},
-              "CachedMethods": {"Quantity": 2, "Items": ["GET", "HEAD"]},
+              "AllowedMethods": {"Quantity": 2, "Items": ["GET", "HEAD"], "CachedMethods": {"Quantity": 2, "Items": ["GET", "HEAD"]}},
               "ForwardedValues": {"QueryString": false, "Cookies": {"Forward": "none"}},
               "MinTTL": 0,
               "DefaultTTL": 86400,
